# backend/src/main/java/com/yoursay/backend/domain/OpinionRequest.java
@@ -1,18 +1,11 @@
 package com.yoursay.backend.domain;
 
-import jakarta.persistence.*;
 import lombok.Getter;
 import lombok.Setter;
 
-@Entity
-@Table(name = "opinions")
 @Getter
 @Setter
-public class Opinion {
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long id;
-
+public class OpinionRequest {
     private String email;
     private Integer bill_id;
     private String opinion;
