# backend/src/main/java/com/yoursay/backend/domain/VoteRequest.java
@@ -1,19 +1,12 @@
 package com.yoursay.backend.domain;
 
-import jakarta.persistence.*;
 import lombok.Getter;
 import lombok.Setter;
 
-@Entity
-@Table(name = "users")
 @Getter
 @Setter
-public class Vote {
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long id;
-
+public class VoteRequest {
     private String email;
     private Integer bill_id;
-    private boolean vote;
+    private Boolean vote;
 }
